microdemo/k8s/22-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: microdemo
spec:
  replicas: 1
  selector:
    matchLabels: { app: worker }
  template:
    metadata:
      labels: { app: worker }
    spec:
      containers:
        - name: worker
          image: image: emccumbe/microdemo-worker:1
          imagePullPolicy: IfNotPresent
          resources:
            requests: { cpu: "25m", memory: "64Mi" }
            limits: { cpu: "200m", memory: "256Mi" }
