microdemo/k8s/30-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: microdemo
spec:
  selector: { app: mysql }
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: microdemo
spec:
  selector: { app: redis }
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: microdemo
spec:
  selector: { app: api }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microdemo
spec:
  selector: { app: frontend }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
