microdemo/k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microdemo
  namespace: microdemo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # API: strip /api prefix so Flask sees /messages
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  name: http
          # Frontend: keep path as-is
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  name: http
